// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding element 1`] = `
"<body><div id=\\"app\\">
        <div wire:id=\\"componentA\\" wire:serialized=\\"empty\\">
            <form wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                <div id=\\"spinner\\" class=\\"hidden\\" wire:loading=\\"submitEl\\"></div>
                <span>Something updated</span>
                <button>hey</button>
            </form>
        </div>
    </div></body>"
`;

exports[`test adding element inside nested component 1`] = `
"<body><div id=\\"app\\">
        <div wire:id=\\"componentA\\" wire:serialized=\\"empty\\">
            <form wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                <div id=\\"spinner\\" class=\\"hidden\\" wire:loading=\\"submitEl\\"></div>
                <button></button>
            </form>

            <div wire:id=\\"componentB\\" wire:serialized=\\"empty\\">
            <form wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                <div id=\\"spinner\\" class=\\"hidden\\" wire:loading=\\"submitEl\\"></div>
                <button>button</button>
                <div>something added</div>
            </form>
        </div>
        </div>
    </div></body>"
`;

exports[`test adding element outside nested component 1`] = `
"<body><div id=\\"app\\">
        <div wire:id=\\"componentA\\" wire:serialized=\\"empty\\">
            <form wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                <div id=\\"spinner\\" class=\\"hidden\\" wire:loading=\\"submitEl\\"></div>
                <button>button</button>
                <div>something added</div>
            </form>

            <div wire:id=\\"componentB\\" wire:serialized=\\"empty\\">
                <form wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                    <div id=\\"spinner\\" class=\\"\\" wire:loading=\\"submitEl\\"></div>
                    <button></button>
                </form>
            </div>
        </div>
    </div></body>"
`;

exports[`test adding element with sibling components 1`] = `
"<body><div id=\\"app\\">
        <div wire:id=\\"componentA\\" wire:serialized=\\"empty\\">
            <form wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                <div id=\\"spinner\\" class=\\"hidden\\" wire:loading=\\"submitEl\\"></div>
                <button></button>
            </form>
        </div>

        <div wire:id=\\"componentB\\" wire:serialized=\\"empty\\">
            <form wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                <div id=\\"spinner\\" class=\\"hidden\\" wire:loading=\\"submitEl\\"></div>
                <button>button</button>
                <div>something added</div>
            </form>
        </div>
    </div></body>"
`;

exports[`test adding nested component 1`] = `
"<body><div id=\\"app\\">
        <div wire:id=\\"componentA\\" wire:serialized=\\"empty\\">
            <form id=\\"yih\\" wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                <div id=\\"spinner\\" class=\\"hidden\\" wire:loading=\\"submitEl\\"></div>
                <button>button</button>

                <div wire:id=\\"componentB\\" wire:serialized=\\"empty\\">
                    <div id=\\"yo\\" wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                        <div id=\\"spinner\\" class=\\"hidden\\" wire:loading=\\"submitEl\\"></div>
                    </div>
                </div>
            </form>
        </div>
    </div></body>"
`;

exports[`test basic click 1`] = `
"<body><div id=\\"app\\">
        <div wire:id=\\"componentA\\" wire:serialized=\\"empty\\">
            <form wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                <div id=\\"spinner\\" class=\\"hidden\\" wire:loading=\\"submitEl\\"></div>
                <button></button>
            </form>
        </div>
    </div></body>"
`;

exports[`test removing nested component 1`] = `
"<body><div id=\\"app\\">
        <div wire:id=\\"componentA\\" wire:serialized=\\"empty\\">
            <form wire:submit=\\"doSomething\\" wire:ref=\\"submitEl\\">
                <div id=\\"spinner\\" class=\\"hidden\\" wire:loading=\\"submitEl\\"></div>
                <button>button</button>
                <div>something added</div>
            </form>
        </div>
    </div></body>"
`;
